--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,6 @@ jobs:
     working_directory: ~/product
     steps:
       - checkout
+      - setup_remote_docker
       - run: tar czf - . | docker run --rm -i qrntz/keyhole-builder:master > keyhole.tar.gz
       - run: ls -lah
