--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,6 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
       - run: tar czf - . | docker run --rm -i qrntz/keyhole-builder:master > keyhole.tar.gz
       - run: ls -lah
