--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,6 @@ jobs:
       - run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker pull qrntz/keyhole-builder:master
-          tar czf - . | docker run --rm -i qrntz/keyhole-builder:master > keyhole.tar.gz
+          tar czf - . | docker run --name keyhole -i qrntz/keyhole-builder:master
+          docker cp keyhole:keyhole .
           ls -lah
