--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,5 +12,8 @@ jobs:
           docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker pull qrntz/keyhole-builder:master
           tar czf - . | docker run --name keyhole -i qrntz/keyhole-builder:master
-          docker cp keyhole:/go/src/keyhole/keyhole .
-          ls -lah
+          docker cp keyhole:/go/src/keyhole/keyhole ./build/overlay/keyhole
+          cat /usr/share/tklc/skel/Dockerfile.head Dockerfile.tail > ./build/Dockerfile
+          cp overlay build/overlay
+          docker build -t qrntz/nginx:test build
+          docker push qrntz/nginx:test
