--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           mkdir -p build
           docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker pull qrntz/keyhole-builder:master
-          cp overlay build/overlay
+          cp -r overlay build/overlay
           tar czf - . | docker run --name keyhole -i qrntz/keyhole-builder:master
           docker cp keyhole:/go/src/keyhole/keyhole ./build/overlay/keyhole
           cat /usr/share/tklc/skel/Dockerfile.head Dockerfile.tail > ./build/Dockerfile
