--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,16 @@ jobs:
     docker:
       - image: qrntz/tklc:circleci
     working_directory: ~/product
+    environment:
     steps:
       - checkout
       - setup_remote_docker
+      - run:
+          name: Setup Environment
+          command: |
+            jq -r '"export PRODUCT_NAME=" + .meta.name' manifest.json >> $BASH_ENV
+            jq -r '"export PRODUCT_VERSION=" + .meta.version' manifest.json >> $BASH_ENV
+            jq -r '.build | to_entries | .[] | ("--build-arg=" + .key + "=" + .value)' manifest.json | tr '\n' ' ' | sed "s/^/export BUILD_ARGS='/; s/ $/'/" >> $BASH_ENV
       - run: |
           mkdir -p build
           docker login -u $DOCKER_USER -p $DOCKER_PASS
@@ -17,5 +24,5 @@ jobs:
           tar czf - . | docker run --name keyhole -i qrntz/keyhole-builder:master
           docker cp keyhole:/go/src/keyhole/keyhole ./build/overlay/keyhole
           cat /usr/share/tklc/skel/Dockerfile.head Dockerfile.tail > ./build/Dockerfile
-          docker build -t qrntz/nginx:test build
+          docker build -t qrntz/nginx:test $BUILD_ARGS build
           docker push qrntz/nginx:test
