--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,24 +9,32 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run: |
-          aws ecr get-authorization-token --query 'authorizationData[0]' | jq -r '("export AUTHTOKEN=\(.authorizationToken)", .proxyEndpoint | ltrimstr("https://") | "export REPO=\(.)")' >> $BASH_ENV
-          source $BASH_ENV
-          jq -r '.meta.build_args | to_entries | ((map("--build-arg=\(.key)=\(.value)") | join(" ") as $x | "export BUILD_ARGS=\"\($x)\""), (.[] | "export \(.key)=\"\(.value)\""))' manifest.json >> $BASH_ENV
-      - run: |
-          echo "$AUTHTOKEN" | base64 -d | cut -d: -f2 | docker login -u AWS --password-stdin "$REPO"
-          mkdir -p build
-          docker pull "$REPO/keyhole-builder:master"
-          if [[ -n $BASE_IMAGE ]]; then docker pull "$BASE_IMAGE"; fi
-          if [[ -d overlay ]]; then cp -r overlay build/overlay; else mkdir -p build/overlay; fi
-          mkdir -p build/overlay/usr/share/tklc/conf
-          cp /usr/share/tklc/conf/* build/overlay/usr/share/tklc/conf/
-          tar czf - . | docker run --name keyhole -i "$REPO/keyhole-builder:master"
-          mkdir -p build/overlay/usr/local/sbin
-          docker cp keyhole:/go/src/keyhole/keyhole ./build/overlay/usr/local/sbin/keyhole
-          cat /usr/share/tklc/skel/Dockerfile.head Dockerfile.tail > ./build/Dockerfile
-          docker build -t "$REPO/$PRODUCT_NAME:$PRODUCT_VERSION" $BUILD_ARGS build
-          docker push "$REPO/$PRODUCT_NAME:$PRODUCT_VERSION"
+      - run:
+          name: Set up environment variables
+          command: |
+            aws ecr get-authorization-token --query 'authorizationData[0]' | jq -r '("export AUTHTOKEN=\(.authorizationToken)", .proxyEndpoint | ltrimstr("https://") | "export REPO=\(.)")' >> $BASH_ENV
+            source $BASH_ENV
+            jq -r '.meta.build_args | to_entries | ((map("--build-arg=\(.key)=\(.value)") | join(" ") as $x | "export BUILD_ARGS=\"\($x)\""), (.[] | "export \(.key)=\"\(.value)\""))' manifest.json >> $BASH_ENV
+      - run:
+          name: Build & push product image
+          command: |
+            echo "$AUTHTOKEN" | base64 -d | cut -d: -f2 | docker login -u AWS --password-stdin "$REPO"
+            mkdir -p build
+            docker pull "$REPO/keyhole-builder:master"
+            if [[ -n $BASE_IMAGE ]]; then docker pull "$BASE_IMAGE"; fi
+            if [[ -d overlay ]]; then cp -r overlay build/overlay; else mkdir -p build/overlay; fi
+            mkdir -p build/overlay/usr/share/tklc/conf
+            cp /usr/share/tklc/conf/* build/overlay/usr/share/tklc/conf/
+            tar czf - . | docker run --name keyhole -i "$REPO/keyhole-builder:master"
+            mkdir -p build/overlay/usr/local/sbin
+            docker cp keyhole:/go/src/keyhole/keyhole ./build/overlay/usr/local/sbin/keyhole
+            cat /usr/share/tklc/skel/Dockerfile.head Dockerfile.tail > ./build/Dockerfile
+            docker build -t "$REPO/$PRODUCT_NAME:$PRODUCT_VERSION" $BUILD_ARGS build
+            docker push "$REPO/$PRODUCT_NAME:$PRODUCT_VERSION"
+            if [[ -z $UPDATE_LATEST || $UPDATE_LATEST = 'yes' ]]; then
+              docker tag "$REPO/$PRODUCT_NAME:$PRODUCT_VERSION" "$REPO/$PRODUCT_NAME:latest"
+              docker push "$REPO/$PRODUCT_NAME:latest"
+            fi
 
 workflows:
   version: 2
