--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,11 @@ jobs:
       - run:
           name: Test deployment
           command: |
-            jq -f /usr/share/tklc/templates/ecs.jq manifest.json | jq -scf /usr/share/tklc/templates/cf.jq
+            aws cloudformation create-stack
+            --stack-name "$PRODUCT_NAME-$PRODUCT_VERSION-$CIRCLE_BUILD_NUM"
+            --parameters 'ParameterKey=KeyName,ParameterValue=test'
+            --template-body "$( jq -f /usr/share/tklc/templates/ecs.jq manifest.json
+                | jq -scf /usr/share/tklc/templates/cf.jq )"
 
 workflows:
   version: 2
