--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,9 +38,9 @@ jobs:
       - run:
           name: Test deployment
           command: |
-            aws cloudformation create-stack
-            --stack-name "$PRODUCT_NAME-$PRODUCT_VERSION-$CIRCLE_BUILD_NUM"
-            --parameters 'ParameterKey=KeyName,ParameterValue=test'
+            aws cloudformation create-stack \
+            --stack-name "$PRODUCT_NAME-$PRODUCT_VERSION-$CIRCLE_BUILD_NUM" \
+            --parameters 'ParameterKey=KeyName,ParameterValue=test' \
             --template-body "$( jq -f /usr/share/tklc/templates/ecs.jq manifest.json
                 | jq -scf /usr/share/tklc/templates/cf.jq )"
 
