--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           name: Test deployment
           command: |
             aws cloudformation create-stack \
-            --stack-name "$PRODUCT_NAME-$PRODUCT_VERSION-$CIRCLE_BUILD_NUM" \
+            --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM" \
             --parameters 'ParameterKey=KeyName,ParameterValue=test' \
             --template-body "$( jq -f /usr/share/tklc/templates/ecs.jq manifest.json | jq -scf /usr/share/tklc/templates/cf.jq )"
 
