--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
           name: Test deployment
           command: |
             aws cloudformation create-stack \
+            --capabilities CAPABILITY_IAM \
             --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM" \
             --parameters 'ParameterKey=KeyName,ParameterValue=test' \
             --template-body "$( jq -f /usr/share/tklc/templates/ecs.jq manifest.json | jq -scf /usr/share/tklc/templates/cf.jq )"
