Wait for stack creation & deletion when testing deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,9 @@ jobs:
             --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM" \
             --parameters 'ParameterKey=KeyName,ParameterValue=test' \
             --template-body "$( jq -f /usr/share/tklc/templates/ecs.jq manifest.json | jq -scf /usr/share/tklc/templates/cf.jq )"
+            aws cloudformation wait stack-create-complete --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM"
+            aws cloudformation delete-stack --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM"
+            aws cloudformation wait stack-delete-complete --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM"
 
 workflows:
   version: 2
