--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,14 +38,16 @@ jobs:
       - run:
           name: Test deployment
           command: |
+            STACK_NAME="$PRODUCT_NAME-$CIRCLE_BUILD_NUM"
             aws cloudformation create-stack \
             --capabilities CAPABILITY_IAM \
-            --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM" \
+            --stack-name "$STACK_NAME" \
             --parameters 'ParameterKey=KeyName,ParameterValue=test' \
             --template-body "$( jq -f /usr/share/tklc/templates/ecs.jq manifest.json | jq -scf /usr/share/tklc/templates/cf.jq )"
-            aws cloudformation wait stack-create-complete --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM"
-            # aws cloudformation delete-stack --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM"
-            # aws cloudformation wait stack-delete-complete --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM"
+            aws cloudformation wait stack-create-complete --stack-name "$STACK_NAME"
+            curl $( aws cloudformation describe-stacks --stack-name "$STACK_NAME" --output text --query "Stacks[].Outputs[?OutputKey == 'ExternalELBUrl'].OutputValue" )
+            aws cloudformation delete-stack --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM"
+            aws cloudformation wait stack-delete-complete --stack-name "$PRODUCT_NAME-$CIRCLE_BUILD_NUM"
 
 workflows:
   version: 2
